--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <span class="position">2</span>
         <span class="position">3</span>
       </div>
-      <form class="themes__slider">
+      <div class="themes__slider">
         <label for="slider" class="slider__label">THEME</label>
         <input type="range" name="slider" min="1" max="3" id="slider" class="slider">
-      </form>
+      </div>
     </div>
 
   </header>
